--- a/.vuepress/package.json
+++ b/.vuepress/package.json
@@ -15,7 +15,7 @@
     "@vuepress/plugin-pwa": "1.2.0",
     "@vuepress/plugin-register-components": "^1.2.0",
     "markdown-it-container": "2.0.0",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "8.0.0"
   }
 }
